
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
Date: 2005/11/02
Description:
Fixed a Basis incompatibility: Pack<N>{Big,Little} structures should
be called PackWord<N>{Big,Little}.

----------------------------------------------------------------------
Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
Date: 2005/10/28
Description:
Fixed a minor Basis incompatibility: hex digits should be upper case.

----------------------------------------------------------------------
Name: Matthias Blume (blume (at) tti - c (dot) org)
Date: 2005/10/25 16:00:00 CDT
Tag: Release_110_56
Description:

New working version (110.56).  NEW BOOTFILES!

----------------------------------------------------------------------
Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
Date: 2005/10/25
Description:
Added interval sets to utility library (signatures INTERVAL_DOMAIN
and INTERVAL_SET, and functor IntervalSetFn).

----------------------------------------------------------------------
Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
Date: 2005/10/14
Description:
Add Zhong Shao's fix for datatype equality functions.

----------------------------------------------------------------------
Name: Allen Leung (leunga (at) reservoir (dot) com)
Date: 2005/10/14 12:30:00 EST
Tag: leunga-20051014-x86-spill
Description:

Bug fix a bug found by Carl Hauser.
There was a typo in the reload code for FCMP in x86SpillInstr.sml.

----------------------------------------------------------------------
Name: Allen Leung (leunga (at) reservoir (dot) com)
Date: 2005/10/14 11:15:00 EST
Tag: leunga-20051014-x86-asm
Description:
